# datafordeler

./: .gitignore  LICENSE  README.md  pyproject.toml
src/datafordeler/: __init__.py  datafordeler.py
src/datafordeleren/: __init__.py  datafordeleren.py
tests/: conftest.py  test_datafordeler.py
