[project]
name = "datafordeler"
version = "0.1.1"
description = "Python bibliotek til at få adgang til datafordeleren"
readme = "README.md"
authors = [
    { name = "Michael Wulff Nielsen", email = "miwn@odense.dk" }
]
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "ruff>=0.14.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
